--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-router-dom": "6.21.1",
     "react-scripts": "5.0.1",
     "reactstrap": "8.10.0",
-    "sass": "1.69.5"
+    "sass": "1.69.5",
+    "sweetalert2": "^11.14.4",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
